fixed overflow on scroll

--- a/src/components/Market/css/item.css
+++ b/src/components/Market/css/item.css
@@ -6,6 +6,10 @@
   padding-bottom: 1.8vh;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 .items-container{
   justify-content: center;
 }
